lab1/Test/L1-A-13-17.output
Error Type B at Line 1
Error Type A at Line 3
Error Type A at Line 12
Error Type A at Line 31
Error Type A at Line 38
Error Type A at Line 41
Error Type B at Line 57
